# Vital

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  vcpkg.json
src/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  TransformVertexShader.vertexshader  main.cpp
